# telnIRC

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.cfg.dist  configure  configure.ac  telnirc.cpp
include/: UIManager.h  config.h  connection.h  defs.h.in  logger.h  misc.h  modules.h  numeric.h  telnerv.h  telnirc.h
src/: UIManager.cpp  config.cpp  connection.cpp  main.cpp  misc.cpp  telnerv.cpp  telnirc.cpp
